hermes_on_ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes
  namespace: hermes
  labels:
    app: hermes
spec:
  selector:
    app: hermes
  ports:
    - name: api
      protocol: TCP
      port: 8642
      targetPort: 8642
