hermes_on_ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hermes
  namespace: hermes
  labels:
    app: hermes
spec:
  to:
    kind: Service
    name: hermes
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
